<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.Controllers.activities.SettingActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/simple_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative_setting"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simple_toolbar">

        <ImageView
            android:contentDescription="@string/navigation_drawer_img_description"
            android:id="@+id/settings_profile_img"
            android:layout_marginTop="30dp"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/dining"
            />

        <TextView
            android:id="@+id/settings_username"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_toEndOf="@+id/settings_profile_img"
            android:layout_toRightOf="@+id/settings_profile_img" />

        <TextView
            android:id="@+id/setting_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:layout_below="@+id/settings_username"
            android:layout_toEndOf="@+id/settings_profile_img"
            android:layout_toRightOf="@+id/settings_profile_img" />

    </RelativeLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/settings_zoom_edit_layout"
        style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_zoom_title"
        android:layout_marginTop="@dimen/double_margin"
        android:layout_marginStart="@dimen/margin_to_parent"
        android:layout_marginEnd="@dimen/margin_to_parent"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_setting">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/settings_zoom_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/settings_radius_edit_layout"
        style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_to_parent"
        android:hint="@string/settings_search_radius_title"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_zoom_edit_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/settings_radius_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/settings_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="@dimen/margin_to_parent"
        android:switchPadding="@dimen/margin_to_parent"
        android:text="@string/settings_notification_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_radius_edit_layout" />


    <!-- BUTTON DELETE ACCOUNT -->
    <Button
        android:id="@+id/profile_activity_button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_account"
        android:textColor="#fff"
        android:layout_marginTop="50dp"
        android:textSize="13sp"
        android:background="@drawable/button_radius_error_color"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_switch"/>

    <Button
        android:id="@+id/settings_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:text="@string/settings_save_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_activity_button_delete" />

</android.support.constraint.ConstraintLayout>